blog2017/static/css/base.css
html {
	height: 100%;
}

body {
	font-family: "Josefin Sans", "Proxima Nova", Helvetica, Corbel, sans-serif;
	height: 100%;
	padding-top: 5.5rem;
}

h1 {
	text-align: center;
	font-family: "Alegreya Sans SC","Helvetica Neue",Helvetica,Arial,sans-serif;
	font-weight: 700;
	font-size: 3.2em;
	margin-top: 0;
}

h2 {
	color: white;
	background-color: #333;
	font-size: 1.5em;
	padding-top: 8px;
	padding-left: 25px;
	margin: 20px -25px;
}

h3 {
	font-size: 1.4rem;
	font-weight: 600;
	padding-top: 1rem;
	padding-left: 14px;
	margin: 20px -25px;
	border-bottom: 1px solid black; 
}

h4 {
	font-weight: bold;
}

h4 .comment-date {
	font-weight: normal;
}

h5 {
	text-align: center;
	font-size: 0.8em;
}

article {
	padding-top: 10px;
	padding-bottom: 20px;
}

p {
	padding-left: 15px;
	padding-right: 15px;
	margin-bottom: 1.5rem;
	text-align: justify;
}

section {
	width: 100%;
}

blockquote {
	min-height: 2em;
    border-left: solid 6px #aaa;
    background: #e5e5e5;
    padding: 10px 30px 10px 30px;
}

code {
	font-size: 80%;
}

.container {
	font-size: 18px;
	line-height: 25px;
	padding-bottom: 65px;
	position: relative;
}

.navbar {
  background-color: #282828;
  font-size: 20px;
}

.navbar-brand {
  padding: 2px;
}

.navbar-nav>li>a {
  padding: 8px;
  margin-right: 5px;
}

.btn {
	cursor: pointer;
}

.btn-outline {
	color: #007bff;
	background-color: #222;
	border-color: #007bff;
}

.btn-outline:hover {
	color: white;
	background-color: #007bff;
}

#body {
	min-height: 100%;
   	position: relative;
}

.content {
	max-width: 800px;
	margin: 0 auto;
}

.footer {
	width: 100%;
	height: 40px;
	background-color: #282828;
	position: absolute;
	bottom: 0;
}

.section-heading {
	color: white;
    -webkit-transition: color 0.5s ease;
   -moz-transition: color 0.5s ease;
    -ms-transition: color 0.5s ease;
     -o-transition: color 0.5s ease;
        transition: color 0.5s ease;
}

.section-heading:hover {
	color: rgb(255, 0, 175);
}

.info-header {
	width: 100%;
	height: 40px;
	position: relative;
}

.info-header i {
	vertical-align: middle;
	height: 1.2em;
}

.meta {
	font-weight: bold;
}

.date {
	font-weight: bold;
	position: absolute;
	bottom: 0;
	padding-bottom: 3px
}

.github-link {
	position: absolute;
	right: 0;
	bottom: 0;
}

.github-link i {
	font-size: 1.5em;
}

.two-col-block .row {
	padding-left: 5px;
	padding-right: 5px;
}

.block_type-two_columns canvas {
	display: block;
	margin: 0 auto;
}

.img-responsive {
	margin: 0 auto;
	display: block;
}

.comment-item {
	-webkit-box-shadow: 2px 2px 5px 0 rgba(0,0,0,0.3);
	-moz-box-shadow: 2px 2px 5px 0 rgba(0,0,0,0.3);
	box-shadow: 2px 2px 5px 0 rgba(0,0,0,0.3);
	transition: all 300ms ease;
	padding: 2px 12px 0 12px;
}

#comments-wrapper, #comments-form-wrapper {
	margin-bottom: 30px;
}

.rich-text ol, .rich-text ul {
	line-height: 1.2em;
	margin-left: 15px;
}

.rich-text li {
	padding-bottom: 0.5em;
	text-align: justify;
}

pre.prettyprint {
	width: 100%;
	margin: 0 1rem 1.5rem 1rem;
	font-size: 13px;
	line-height: 1.2em;
	white-space: pre-wrap;
	/* Overwriting default border style */
	padding: 0 !important;
	border: 1px solid #aaa !important;
	border-left: none !important;
	border-right: none !important;
}

.prettyprint li {
	padding: 0.4em;
	background-color: rgb(250, 250, 250);
}

/* Ensure line numbers on every line of code blocks */
li.L0, li.L1, li.L2, li.L3, li.L5, li.L6, li.L7, li.L8 {
	list-style-type: decimal !important;
}

.kwd {
	font-weight: bold;
}

.equation {
	font-size: 1.25rem;
	padding-left: 20px;
	margin-bottom: 12px;
}

.navigation-name {
	display: inline-block;
	padding-left: 12px;
	padding-right: 6px;
	line-height: 20px;
}

.naviagation-arrow {
	position: absolute;
    top: 50%;
    transform: translateY(-50%);
}

.parent-page-link {
	width: 100%;
	text-align: center;
}

.next-page-link {
	text-align: right;
}

.featured-page-container {
	padding: 0 5px;
	margin-bottom: 8px;
}

.featured-page {
	height: 110px;
	-webkit-box-shadow: 2px 2px 5px 0 rgba(0,0,0,0.3);
	-moz-box-shadow: 2px 2px 5px 0 rgba(0,0,0,0.3);
	box-shadow: 2px 2px 5px 0 rgba(0,0,0,0.3);
	transition: all 300ms ease;
}

.featured-page:hover {
	/*background-color: #f4f4f4;
	-moz-transform: rotate(-2deg) translateY(-5px);
	-webkit-transform: rotate(-2deg) translateY(-5px);
	-o-transform: rotate(-2deg) translateY(-5px);
	transform: rotate(-2deg) translateY(-5px);
	*/
}

.section-more-link {
	padding-top: 5px;
}

a:hover {
	color: rgb(255, 0, 175);
}

.featured-page-image {
	float: left;
	margin: 5px;
}

.featured-page-text {
	text-align: center;
	padding: 5px;
}

.featured-page-title {
	font-size: 1.1em;
	padding-top: 5px;
	padding-bottom: 2px;
}

.featured-page-details {
	font-size: 0.8em;
	line-height: 1.5em;
	padding: 2px 10px;
	margin: auto;
	color: black;
}

.featured-page-link:hover {
	text-decoration: none;
}

.featured-page:hover .featured-page-title{
	text-decoration: underline;
}

.search-result-heading {
	font-weight: bold;
}

.page-tag {
    font-family: 'Josefin Sans', sans-serif;
    font-size: 17px;
    line-height: 21px;
    background-color: #686868;
    color: #f8f8f8;
    padding: 3px 6px 1px 6px;
    margin-right: 5px;
    margin-bottom: 4px;
    -moz-border-radius: 10px;
    -webkit-border-radius: 10px;
    border-radius: 16px;
    white-space: nowrap;
    display: inline-block;
}

.page-tag:hover, .page-tag.selected {
    background-color: #ec008c;
    cursor: pointer;
}

